More asdlasdk;sadka;s

--- a/p3-secret/p3.md
+++ b/p3-secret/p3.md
@@ -179,9 +179,9 @@ Good? Let's move on...
 <a id="approval"></a>
 ## AI Logic: Approval-Directed
 
-You may have noticed a pattern in AI Safety problems.
+You may have noticed a pattern in AI Safety.
 
-We imagine giving an AI an innocent-seeming goal. Then, we think of the worst way it could technically achieve that goal:
+First, we imagine giving an AI an innocent-seeming goal. Then, we think of the worst way it could technically achieve that goal. Like:
 
 * <u>"Pick up dirt from the floor"</u> → Knocks all the potted plants over so it can pick up more dirt.
 * <u>"Calculate digits of pi"</u> → Deploys a computer virus to steal as much compute power as possible, to calculate digits of pi.
@@ -558,7 +558,7 @@ Here's some highlights! These aren't necessarily the most-influential findings, 
 
 **Understanding "grokking" in neural networks:**
 
-In 2022, [Power et al](https://arxiv.org/pdf/2201.02177) found something strange: train a neural network to do "clock arithmetic", and for /////s of cycles it'll do really badly, just memorizing the test examples... then *suddenly* it "gets it", and does well on problems it's never seen before.
+In 2022, [Power et al](https://arxiv.org/pdf/2201.02177) found something strange: train a neural network to do "clock arithmetic", then for thousands of cycles it'll do horribly, just memorizing the test examples... then *suddenly* around step ~100,000 it "gets it", and does well on problems it's never seen before.
 
 In 2023, [Nanda et al](https://arxiv.org/pdf/2301.05217) analyzed the inside of that network, and found the "suddenness" was an illusion: all through training, a secret sub-network was slowly growing — *which had a circular structure, exactly what's needed for clock arithmetic!*
 
@@ -781,100 +781,120 @@ TODO
 
 ---
 
-# START EDITING FROM HERE
-
 <a id="governance"></a>
 ## AI Governance: the _Human_ Alignment Problem
 
-> `Error ID-10-T: Problem located between keyboard and chair.`
-
-// TODO link
+> `Error ID-10-T: Problem exists between keyboard and chair.`
 
 The saddest apocalypse: we solve the AI safety, we even solve ethical philosophy, and then... people are just too greedy or lazy to use it. Then we perish.
 
-But for better & worse, this ain't our first stupid, entirely-self-inflicted existential risk. No analogy is perfect, but **I think the closest historical analogy for the promises/perils of advanced AI, can be found with nuclear physics.**  (Stuart Russell, co-author of the #1 AI textbook, agrees.[^russell-nuclear])
+But for better & worse, this ain't our first stupid, entirely-self-inflicted existential risk. Not a perfect analogy, but we can learn a lot about AI's promises/perils, from the history of nuclear physics.[^russell-nuclear]
 
 [^russell-nuclear]: TODO
 
-// pic?
+`TODO: picture summarizing the analogy?`
 
 To spell out the analogy:
 
-* **A reason you, stone-cold businessperson, should still care about safety:** Remember how nuclear power in the US, despite being saferCITE & far cheaperCITE than all other forms of power generation, got screwed over regulation-wise by the Three Mile Island incident?
-	* If we don't make damn sure AI is safe, we *will* get our equivalent of Three Mile Island, or Chernobyl, or even an *AI Lab Leak* — and the banhammer will come down, and AI progress will stall for decades. So, do the AI Safety please.
-* **Promises & Perils:** Splitting the atom lets us create extremely cheap electricity, with no greenhouse gas emissions... *and* lets us incinerate entire cities, all civilians & children included.
-	* Current AI can detect tumors, and self-driving cars are ///x safer than humans... *and* current AI is good enough to discover new bio-weapons // chemical paper, also this:
-		* // https://openai.com/index/building-an-early-warning-system-for-llm-aided-biological-threat-creation/
-	* Future advanced biotech AI might help us cure cancer... *and* create unprecedented bio-weapon pandemics.
-		* // todo: gave at least a 10% chance to advanced AI leading to outcomes as bad as human extinction.” https://arxiv.org/abs/2401.02843 // & layperson friendly
-		* // todo: Rogue AI like rogue state or rogue actor?
-		* // self-coups lock-in power
-* **An Arms Race**: Even though ~everyone feared a nuclear World War 3, the US & USSR got caught in an arms race, building enough nuclear weapons to overkill each other several times over.
-	* Even though the leaders of top AI labs *claim* to worry deeply about existential AI risk, they're "caught"(?) in an economic arms race to increase AI capabilities.
-* **Possible hope out?** Most people don't know, but the world's nuclear weapons *dropped by //%* in a few decades after /////! This was in part due to good policy, and also some technical achievements to make that policy possible (e.g. the "Trust But Verify" approach to monitoring nuclear). And since Chernobyl & Three Mile Island, there's been new designs for nuclear reactors to be meltdown-proof, or even *recycle* old nuclear waste.
-	* Likewise, there are proposals & proofs-of-concepts for how we can "Trust But Verify" safe AI!  We'll see these in a few pararaphs...
+**Why even a stone-cold businessperson should care about safety:** You know how — despite nuclear power being safer[^nuclear-safer], cheaper[^nuclear-cheaper], and creates less carbon than solar[^nuclear-co2] — nuclear got screwed over regulation-wise, because of the (valid) fears after Chernobyl & Three Mile Island?
+
+Likewise: if we don't make *damn* sure AI is safe, if even *one* "AI lab leak" happens, a self-reprogramming computer virus gets out, the regulatory banhammer will come down, and AI progress will stall for decades. So, do the AI Safety please.
+
+**Promises & Perils:** Splitting the atom lets us create abundant energy with near-zero greenhouse gasses... *and* lets us incinerate whole cities. 
+
+Likewise: Advanced AI may let us accelerate medical research & save millions of lives... *and* let us accelerate bioweapons, psychological warfare, and surveillance totalitarianism.
+
+**An Arms Race**: Although ~everyone feared a nuclear World War 3, the US & USSR got caught in an arms race, building enough nuclear weapons to overkill each other several times over.
+
+Likewise: although the leaders of top AI labs *claim* to worry deeply about existential AI risk[^top-claims], they're currently in an arms race to increase AI capabilities. (And the US & Chinese governments are starting to join in...[^us-china])
+
+[^top-claims]: TODO
+
+[^us-china]: TODO
+
+**Possible hope out?** Most people don't know, but the world's nuclear warhead supply has *been cut to a sixth of what it used to be*, in just a few decades! (~70,000 in 1986, ~12,500 in 2023, thirty-seven years later[^owid]) This was due to good policy, *and* technical achievements to make that policy possible (e.g. ability to "trust but verify" nuclear reductions).
+
+[^owid]: TODO https://ourworldindata.org/nuclear-weapons#the-number-of-nuclear-weapons-has-declined-substantially-since-the-end-of-the-cold-war 
+
+Likewise, there are many proposals to make AI easier to "trust but verify"!
+
+This is AI Governance.
 
 . . .
 
-You know I like charts. So, let me repeat the chart from Part Two, showing: AI Safety vs AI Capabilities, where we are, where we're headed, and the thresholds for dangers from AI misuse & from rogue AI.
+You know I like charts! Here's the chart from Part Two again, showing:
+
+* AI Safety vs AI Capabilities
+* The "safe" line where Safety > Capabilities
+* Where we are & the direction we're on
+* The "good place" and "bad place", above a certain Capability
 
 ![TODO](../media/p3/governance/rocket.png)
 
-// TODO: edit for risk by misuse
+`// TODO: edit to include risk by misuse`
 
-From this doodle-metaphor-thing, a strategy presents itself:
+The goal: keep our rocket above the "safe" line. Thus, a 2-part strategy:
 
-**1\) Know where we are & where we're headed:**
+1. Verify where we are, our direction & velocity.
+2. Use sticks & carrots to stay above the "safe" line.
 
-// todo: don't know exactly where & where heading
+In more detail:
 
-* <u>Evaluations</u>, to know if an AI is superhumanly good at persuasionTODO (current ones already are), or can aid with developing weapons of mass destruction (they're getting there). // TODO WMDP and https://www.axios.com/2024/11/14/anthropic-claude-nuclear-information-safety
-	* One problem with evaluations (including evals for *capabilities*, not safety) is someone could leak the evaluation onto the public web, which will get into the training data, so an AI trained on that can "cheat". Thankfully, we can test if *that* happened, by including "canary strings" (named after the historical canaries in coal mines). Result: yes, this happens all the time.[^canary-string]
-	* TODO: "model cards"
-	* https://www.anthropic.com/research/statistical-approach-to-model-evals
-* <u>Protect whistleblowers' free speech</u>. TODOcheck OpenAI had a *non-disparagement* clause in their contract, making it illegal for ex-employees to publicly sound the alarm on them being sloppy on safety. (Aside: huge kudos to Daniel K//TODO// for walking away from $2 million in equity on OpenAI to go public about the org's irresonsibility////////)
-* <u>Enforce transparency & standards on major AI labs</u>. (in a way that isn't over-burdening)
+**1\) Verify where we are, our direction & velocity:**
+
+* <u>Evaluations (or "Evals")</u>, to keep automatically track of how good frontier AIs are at risky capabilities, like helping people develop weapons of mass destruction. (they're getting quite good...)[^evals]
+* <u>Protect whistleblowers' free speech</u>. OpenAI once had a *non-disparagement* clause in their contract, making it illegal for ex-employees to publicly sound the alarm on them being sloppy on safety.[^non-disparage] Whistleblowers should be protected.
+* <u>Enforce transparency & standards on major AI labs</u>. (in a way that isn't over-burdening.)
 	* Require AI labs adopt a Responsible Scaling Policy (see below), openly publish that policy, and be transparent about their evals.
-	* Send in external, independent auditors (who will keep things confidential). This is what many industries have to do already.
-* <u>Track chips & compute</u>. Governments keep track of GPU clusters, and who's running "frontier AI"-levels of compute. (The same way governments already track "bomb"-levels of nuclear material.)
-	* This will have to be balanced against privacy concerns, of course.
+	* Send in external, independent auditors (who will keep trade secrets confidential). This is what many software industries (like cybersecurity & VPNs) *already* do as regular practice.
+* <u>Track chips & compute</u>. Governments keep track of GPU clusters, and who's running large "frontier AI"-levels of compute. The same way governments already track large "bomb"-levels of nuclear material.
+* <u>Forecasting</u>. To know not just *where* we are, but our direction & velocity: have "super-predictors" regularly forecast the upcoming capabilities & risks.[^ai-forecast] (There's early evidence showing that AI *itself* can help with forecasting![^ai-forecast-2])
 
-[^canary-string]: TODO
+[^evals]: TODO
 
-**2\) Credibly commit to staying above the safety-capabilities line.**
+[^non-disparage]: TODO
 
-* <u>Responsible Scaling Policy</u>. Problem: we don't *know* all the risks of much-more advanced AI. We can see ahead a bit, but not much further. Solution: Like the iterative approach in Scalable Oversight, **instead of trying to create a policy that'll work for all time, we commit to a _meta-policy:_** "We commit to not even *start* training AI Level N, until we've created evals, standards & required safeguards for AI Level *N+1*."
-	* For example, current frontier AI is at "ASL-2" (AI Safety Level 2), and Anthropic has defined security threshold/measures for ASL-3. ASL-4 and above have not yet been defined, but they've committed to defining ASL-4 *before* even starting on an ASL-3 AI.
-	* todocite:(demonstrates increased risk of catastrophic misuse e.g. bioweapons, far above textbooks, OR
-* <u>Differential Technology Development (DTD)</u>: While the line between "good for capabilities" and "good for safety" is blurry... just because gray exists, doesn't mean you can't tell some things are brighter than others. DTD is a commitment (within a company, and/or society-wide) to invest *more* effort into the safe/low-downside stuff, than the dual-use/catastrophic-potential stuff. Analogy: in biotech, this would mean investing more in pandemic prevention, than gain-of-function research. Likewise: in AI, this may mean more investment in e.g. interpretability, than e.g. creating autonomous murder drones.//TODO like
-    * persuasion https://www.alignmentforum.org/posts/zxmzBTwKkPMxQQcfR/let-s-use-ai-to-harden-human-defenses-against-ai
-    * // analogy to sneaky & helpful prover
+[^ai-forecast]: TODO
 
-Targeted Regulation?
+[^ai-forecast-2]: TODO
 
-**3\) Use the good in AI, to help counter the possible bad in AI:**
+**2\) Use sticks & carrots to stay above the "safe" line.**
 
-* Use AIs to improve our ability to forecast future possibilities (AIs are already helping[^llm-forecasting]), and do scenario-planning to prevent the worst, and/or prepare for the worst.
-* Use AI to defend against other existential threats (which could be accelerated through AI). For example, using AI to *fix* vulnerabilities in critical software to defend against cyberattacks, or AI to develop defenses against engineered bioweapons (examples of bio-defenses[^example-biodefense])
-* (See also the next sections: Alternatives to AGI, and Cyborgism!)
+* <b><u>Responsible Scaling Policy</u></b>. The problem is we can't even *imagine* the risks until we get closer. So, instead of having a policy for all AIs across all time, like Scalable Oversight, this is an *iterative* approach. The policy is this: "We commit to not even *start* training AI Level N, until we've created evals, standards & safeguards for AI Level *N+1*."[^anthropic-RSP]
+* <u>Differential Technology Development (DTD)</u>:[^dtd] Invest in tech & research that advances "Safety" more than "Capabilities". (Sure, it's a blurry line, but just because there's numbers between 0% and 100% doesn't mean some numbers aren't bigger than others.) For example:
+    * Investing in tech to fight catastrophic risk: AI to *boost* our cybersecurity (before a rogue AI-virus can take down our hospitals[^hospitals]), and tech to detect & fight against advanced bioweapon pandemics.[^pandemic-prep]
+    * Investing in AI Safety research. Yes this suggestion is kinda back-scratchy, but I still endorse it.
+    * Investing in AI that *enhances* humans, not *replaces* humans. (See below: "Alternatives to AGI" and "Cyborgism"!)
 
-[^llm-forecasting]: TODO
+[^hospitals]: TODO
 
-[^example-biodefense]: TODO -
+[^pandemic-prep]: TODO
 
-(Bonus: Misc governance-related ideas or tech I couldn't fit into the above) // TODO: weight security, watermark, unlearning) Open-source
+[^anthropic-RSP]: TODO
 
-(Bonus: The *big* thing missing above, is "how to deal with open-source AIs"? I love open-source, *all* my work so far's been open-source, but *this* is the large open question in AI Governance I don't have good answers for. Click here for my rambling thoughts.)
+[^dtd]: TODO
+
+Stray thought: while "sticks" (threat of fines, punishment) are necessary, I think it's neglected how we can use "carrots" (market incentives) to redirect industry. After all, ozone-layer-thinning CFCs were removed *with cooperation* from DuPont (the leading creator of CFCs), because policymakers *explicitly helped* DuPont profit from the transition away from CFCs.[^cfc] Result: ozone layer is healing![^ozone-heal] Sometimes it's better to just *pay off* Goliath, y'know? As for AI: a few AI Safety inventions had market payoffs[^safety-market], and I think the "Alternatives to AGI" & "Cyborgism" projects would be *both* safer & make a profit. Plus, the insurance industry would looooove managing AI risks.
+
+[^cfc]: TODO
+
+[^ozone-heal]: TODO
+
+[^safety-market]: TODO: RLHF, Claude Sheets
+
+`(TODO: Extra ideas I couldn't fit into the above) // TODO: weight security, watermark, unlearning, economics, open-source models)`
 
 . . .
 
 A note of pessimism, followed by cautious optimism.
 
-Consider the recent saga of SB 1047.  This was an AI Safety bill in California, USA that was popular with citizens, and passed the ////////.  It was imperfect, but endorsed by //////// and cautiously endorsed by Anthropic — while opposed by other major AI labs, like OpenAI. (TODO: Musk?)  It was vetoed by the governor Gavin Newsom, a guy who broke his own Covid rules to go to dinner parties.  
+Consider the recent saga of SB 1047. This was an AI Safety bill in California USA that 65% of citizens supported (only 25% opposed, 10% unsure), passed 32-1 in the Senate, endorsed by Anthropic & Elon Musk (while opposed by OpenAI & Facebook)... then got vetoed by governor Gavin Newsom, a guy who broke his own Covid rules to go to dinner parties.[^sb-1047]
 
-Actually, consider just the last few decades in politics. "Humans coordinating to solve global problems" is... not a thing we seem to be good at. (Covid-19, global warming, fertility crisis)
+[^sb-1047]: TODO. also other citations for each point
 
-But: we *used* to be able to solve global problems quickly!  Smallpox got eradicated[^smallpox], it's no longer the case that *half* of babies died before age 5 //[^infant-mortality], CFCs were banned & the ozone layer *is* actually healing![^ozone]  I don't know *why* we were good then & suck now (WTF Happened in 1971? TODO), but... the power is within us!  We "just" gotta un-bury it.
+Actually, consider the last few *decades* in politics. Global warming, Covid-19, the fertility crisis, the opioid crisis, more war? "Humans coordinating to deal with potential civilization-level threats" is... not a thing we seem to be good at.
+
+But we *used* to be good at it! We eradicated smallpox[^smallpox], it's no longer the case that *half* of babies died before age 5[^infant-mortality], CFCs were banned & the ozone layer *is* actually healing![^ozone] I don't know *why* we were good then & suck now ([WTF Happened in 1971?](https://wtfhappenedin1971.com/)), but... the power is within us! We "just" gotta un-bury it.
 
 [^smallpox]: TODO
 
@@ -886,8 +906,6 @@ Humans *have* solved the "human alignment problem" before.
 
 Let's get our groove back, and align ourselves on aligning AI.
 
-// TODO: polarization on near vs far AI risk? esp post Trump & Elon
-
 ### 🤔 Review #9
 
 TODO
@@ -898,46 +916,52 @@ TODO
 <a id="alt"></a>
 ## Alternatives to AGI
 
-Why don't we just *not* create the Torment Nexus?
+Why don't we just *not* create the Torment Nexus?[^torment]
 
-Since creating an Artificial General Intelligence (AGI) is so risky... like sparrows stealing an owl egg to try to raise an owl who'll defend their nest & hopefully not eat them[^bostrom]... why don't we find ways to get the pros *without* the cons? A way to defend the sparrow nest *without* raising an owl? To un-metaphor this: we don't we find ways to use **less-powerful, narrow-scope, not-fully-autonomous** AIs to help us — say — cure cancer, shape economies to be prosperous yet fair, help us live full & flourishing lives with each other? All *without* risking a Torment Nexus?
+[^torment]: TODO
+
+If creating an Artificial General Intelligence (AGI) is so risky, like sparrows stealing an owl egg to try to raise an owl who'll defend their nest & hopefully not eat them[^bostrom]...
+
+...why don't we find ways to get the pros *without* the cons? A way to defend the sparrow nest *without* raising an owl? To un-metaphor this: why don't we find ways to use **less-powerful, narrow-scope, not-fully-autonomous AIs** to help us — say — cure cancer & build flourishing societies, *without* risking a Torment Nexus?
 
 [^bostrom]: TODO
 
 Well... yeah.
 
-Yeah I endorse this one. Sure, it's obvious, but "2 + 2 = 4" is obvious, that doesn't make it wrong. The problem is how to *actually do this* in practice. Here's a few concrete proposals:
+Yeah I endorse this one. Sure, it's obvious, but "2 + 2 = 4" is obvious, that don't make it wrong. The problem is how to *actually do this* in practice. 
 
-// pics???
+Here's some proposals, of how to get the upsides with much fewer downsides:
 
-* **Comprehensive AI Services (CAIS)** (by Eric Drexler[^drexler]): A fully general AI may solve problems generally, but is unpredictable *because* it's general. Meanwhile, narrow tools like calculators will never go rogue even if they're really good, but they're limited to one use case. Proposed solution: make a large suite of narrow AI tools, that, when a *human* directs them like a movie director or music conductor, can be used to generally solve problems. The human, and their values, stay in the center.
-	* (As Drexler himself notes, general autonomous AI would still be a concern, but CAIS would greatly reduce the economic incentive to make such an AGI.)
-* **Pure Scientist AI**: (Bengio TODO)  This AI does not take any direct actions in the physical world.  Ideally, it wouldn't even "plan".  Like how in Excel you can drop in a bunch of data, and get the best-fitting line... *ideally:* with a "pure scientist AI", you drop in a bunch of data, and you get the best-fitting *theory*.  (For example: give it the planets' positions in the night sky, and it'll return: "Oh, yeah, Earth's not the center. Sun is. Also stuff moves in ellipses, not circles.")
-* **Microscope AIs** (Chris Olah TODO): Instead of (just) using the *output* of a neural network to solve a problem, use the *insides of a trained network* to understand something! When a neural network is trained on data, the final shape of the *network itself* can reveal hidden patterns in the data. // TODO check
-	* (This is already used successfully for "word embeddings", where training a neural network to predict words reveals the "space" of language.)[^word-embeddings]
-* **Hybrid AIs**: Good Ol' Fashioned AI was interpretable & verifiable, but so inflexible it couldn't even recognize pictures of cats. Modern neural-network AI *is* flexible, but not currently possible to verify them as safe or robust. Proposed solution: Mix the two! Use neural-networks as narrow "intuition" modules, guided by a verifiable, logical GOFAI.
-	* "Just combine GOFAI and Modern AI" is probably as hard as "Just combine special relativity with quantum mechanics"[^sr-gm]. This has been an active area of research for decades.
-	* However, there's a few big success cases: for example, AlphaGo used a GOFAI algorithm called "tree search", but to narrow down the search, it trained neural network to get an "intuition" for what board positions were better/worse.
-* **Quantilizers** (by Jessica Taylor TODO): Instead of making an AI that *optimizes* for a goal, make an AI that is trained to *imitate a (smart) human*. (No, todo: SOFT optimizaton.) Then to solve a problem, run this human-imitator e.g. 100 times, and pick the best solution. This will be equivalent to getting a smart human's ideas on the best 1% of their days. This avoids the Goodhart-problems[^goodhart] of pure optimization, and keeps the resulting solutions human-like.  
+* **Comprehensive AI Services (CAIS)**[^alt-drexler]: Make a large suite of narrow non-autonomous AI tools (think: Excel, Google Translate). To solve general problems, insert *human* agency: humans are the conductors for this AI orchestra. The human, and their values, stay in the center.
+* **Pure Scientist AI**:[^alt-bengio] An AI that acts like a pure theoretical scientist: no actions in the real world, just give it a bunch of data, `[something clever happens]`, and it gives you useful scientific findings. Ideally, this AI doesn't "plan" (this would lead to Instrumental Convergence problems[^ic-problems], and instead "fits the best theory to data", like how Excel plan-less-ly fits the best line to data.
+* **Microscope AIs**[^alt-olah]: In contrast, instead of making an AI whose scientific findings are its *output*, we train an AI on real-world data... then look *at the neurons* to learn about the world! (If you remembered from the Interpretability section, researchers were able to find *an actual circular structure* inside an AI trained to do "clock arithmetic"!)
+* **Hybrid AIs**: The best of both worlds: the verifiability of Good Ol' Fashioned AI, but the flexibility of Modern Neural Network AI. (Note this is a *really* hard problem, but there's been a few small success cases.[^hybrid-success]
+* **Quantilizers**[^alt-taylor]: Instead of making an AI that *optimizes* for a goal, make an AI that is trained to *imitate a (smart) human*. Then to solve a problem, run this human-imitator e.g. 20 times, and pick the best solution. This will be equivalent to getting a smart human on the best 5% of their days. This "soft optimization" avoids Goodhart-problems[^goodhart] of pure optimization, and keeps the resulting solutions human-understandable.
 
-[^drexler]: TODO https://www.alignmentforum.org/posts/LxNwBNxXktvzAko65/reframing-superintelligence-llms-4-years
+[^alt-drexler]: TODO https://www.alignmentforum.org/posts/LxNwBNxXktvzAko65/reframing-superintelligence-llms-4-years
 
-[^sr-gm]: TODO
+[^alt-bengio]: TODO
 
-[^word-embeddings]: TODO
+[^ic-problems]: TODO
+
+[^alt-olah]: TODO
+
+[^hybrid-success]: TODO like AlphaGo
+
+[^alt-taylor]: TODO
 
 [^goodhart]: TODO
 
-Okay, I confess, there *are* a few big problems with "focusing on Alternatives to AGI". Social problems, *and* technical problems:
+*All* of these are easier said than done, of course. And there's *still* other problems with a focus on "Alternatives to AGI". Social problems, and technical problems:
 
-* A malicious human/group of humans could still use narrowly-scoped AI for for catastrophic ends. (e.g. bioweapon-pandemic, self-replicating killer drones)
-	* At the very least, a well-meaning-but-naïve set of humans could use narrow non-autonomous AI to *make* general autonomous AI, with all its problems. So, narrow AI is at best a temporary measure.
-* An AI that doesn't plan ahead, and "merely" predicts future outcomes, can still have nasty side-effects, due to self-fulfilling prophecies. (TODO :See an extended example)
-* Due to economic incentives (and human laziness), the market may just *prefer* to make general AIs that are fully autonomous, & act on their own.
+* A malicious group of humans could still use narrow AI for catastrophic ends. (e.g. bioweapon-pandemic, self-replicating killer drones)
+* At the very least, a well-meaning-but-naïve group could use narrow non-autonomous AI to *make* general autonomous AI, with all of its risks.
+* An AI that doesn't plan ahead, and "merely" predicts future outcomes, can still have nasty side-effects, due to self-fulfilling prophecies. (TODO :See an extended example from Part One)
+* Due to economic incentives (and human laziness), the market may just *prefer* to make general AIs that are fully autonomous.
 
-But, the social problems could "just" be addressed with AI Governance, and the technical problems could be addressed with many of the technical solutions described earlier.
+Sure, the social problems could "just" be addressed with AI Governance, and the technical problems could be addressed with many the many solutions on this page.
 
-Still, I suspect *eventually* someone (some*thing?*) will make true AGI possible, and we want to be prepared for that. But in the meantime, the above alternatives *can* help us prepare the policy & science for AGI, and be greatly beneficial to health & flourishing. Curing cancer ain't no small thing!
+Still, I suspect *eventually* someone (some*thing?*) will make true AGI possible, and we should be prepared for that. But in the meantime, the above can help us prepare, and have great benefits. Using narrow bio-medical AI to "just" cure cancer ain't no small thing!
 
 ### 🤔 Review #10
 
@@ -997,7 +1021,7 @@ Okay, enough metaphor, here's how Cyborgism has been applied to AI *specifically
 
 [^cyborgism]: TODO link janus
 
-[^cite-self]: // TODO cite our own article
+[^cite-self]: // TODO cite own article
 
 [^gwern]: TODO (Well, at the time. Gwern claims human-AI teams are strictly worse than pure-AI at chess now, but I couldn't find hard sources or data for that, in either direction. But anecdotally, it seems that human-AI centaurs are at least *on par* with pure-AI. Still, human-AI held its higher ground for a bit over a decade!) // TODO
 
@@ -1016,6 +1040,14 @@ Then again...
 ![Close-up of Sigourney Weaver](../media/p3/cyborg/weaver2.png)
 
 That's pretty cool.
+
+. . .
+
+**RECAP: How to deal with Problems with the Humans (in AI)...**
+
+* Align the AI to a diverse range of human values/ethics. But allow it to self-reflect & change.
+* AI Governance to keep us above the "safe" line: Trust but verify, sticks & carrots.
+* Make tech that maximizes upsides while minimizing downsides: narrow non-agentic AI, and AI that *enhances, not replaces, humans*.
 
 ### 🤔 Review #11
 
