--- a/p3-secret/p3.md
+++ b/p3-secret/p3.md
@@ -894,7 +894,7 @@ Consider the recent saga of SB 1047. This was an AI Safety bill in California US
 
 Actually, consider the last few *decades* in politics. Global warming, Covid-19, the fertility crisis, the opioid crisis, more war? "Humans coordinating to deal with potential civilization-level threats" is... not a thing we seem to be good at.
 
-But we *used* to be good at it! We eradicated smallpox[^smallpox], it's no longer the case that *half* of babies died before age 5[^infant-mortality], CFCs were banned & the ozone layer *is* actually healing![^ozone] I don't know *why* we were good then & suck now ([WTF Happened in 1971?](https://wtfhappenedin1971.com/)), but... the power is within us! We "just" gotta un-bury it.
+But we *used* to be good at it! We eradicated smallpox[^smallpox], it's no longer the case that *half* of babies died before age 5[^infant-mortality], CFCs were banned & the ozone layer *is* actually healing![^ozone] I don't know *why* we were good then & suck now, but... the power is within us! We "just" gotta un-bury it.
 
 [^smallpox]: TODO
 
