--- a/p3-secret/p3.md
+++ b/p3-secret/p3.md
@@ -798,11 +798,13 @@ To spell out the analogy:
 
 **Why even a stone-cold businessperson should care about safety:** You know how — despite nuclear power being safer[^nuclear-safer], cheaper[^nuclear-cheaper], and creates less carbon than solar[^nuclear-co2] — nuclear got screwed over regulation-wise, because of the (valid) fears after Chernobyl & Three Mile Island?
 
-Likewise: if we don't make *damn* sure AI is safe, if even *one* "AI lab leak" happens, a self-reprogramming computer virus gets out, the regulatory banhammer will come down, and AI progress will stall for decades. So, do the AI Safety please.
+Likewise: if we don't make *damn* sure AI is safe, if even *one* "AI lab leak" happens (a self-reprogramming computer virus escapes), the regulatory banhammer will come down, and AI progress will stall for decades.
+
+So, even for selfish greedy reasons, do the AI Safety please.
 
 **Promises & Perils:** Splitting the atom lets us create abundant energy with near-zero greenhouse gasses... *and* lets us incinerate whole cities. 
 
-Likewise: Advanced AI may let us accelerate medical research & save millions of lives... *and* let us accelerate bioweapons, psychological warfare, and surveillance totalitarianism.
+Likewise: Advanced AI may let us accelerate medical research & save millions of lives... *and* let us accelerate bioweapons, and risks an autonomous self-enhancing software capable of hacking & social manipulation.
 
 **An Arms Race**: Although ~everyone feared a nuclear World War 3, the US & USSR got caught in an arms race, building enough nuclear weapons to overkill each other several times over.
 
@@ -845,9 +847,9 @@ In more detail:
 * <u>Evaluations (or "Evals")</u>, to keep automatically track of how good frontier AIs are at risky capabilities, like helping people develop weapons of mass destruction. (they're getting quite good...)[^evals]
 * <u>Protect whistleblowers' free speech</u>. OpenAI once had a *non-disparagement* clause in their contract, making it illegal for ex-employees to publicly sound the alarm on them being sloppy on safety.[^non-disparage] Whistleblowers should be protected.
 * <u>Enforce transparency & standards on major AI labs</u>. (in a way that isn't over-burdening.)
-	* Require AI labs adopt a Responsible Scaling Policy (see below), openly publish that policy, and be transparent about their evals.
+	* Require AI labs adopt a Responsible Scaling Policy (see below), openly publish that policy, and be transparent about their evals & safeguards.
 	* Send in external, independent auditors (who will keep trade secrets confidential). This is what many software industries (like cybersecurity & VPNs) *already* do as regular practice.
-* <u>Track chips & compute</u>. Governments keep track of GPU clusters, and who's running large "frontier AI"-levels of compute. The same way governments already track large "bomb"-levels of nuclear material.
+* <u>Track chips & compute</u>. Governments keep track of GPU clusters, and who's running large "frontier AI"-levels of compute. Like how governments already track large "bomb"-levels of nuclear material.
 * <u>Forecasting</u>. To know not just *where* we are, but our direction & velocity: have "super-predictors" regularly forecast the upcoming capabilities & risks.[^ai-forecast] (There's early evidence showing that AI *itself* can help with forecasting![^ai-forecast-2])
 
 [^evals]: TODO
@@ -874,7 +876,7 @@ In more detail:
 
 [^dtd]: TODO
 
-Stray thought: while "sticks" (threat of fines, punishment) are necessary, I think it's neglected how we can use "carrots" (market incentives) to redirect industry. After all, ozone-layer-thinning CFCs were removed *with cooperation* from DuPont (the leading creator of CFCs), because policymakers *explicitly helped* DuPont profit from the transition away from CFCs.[^cfc] Result: ozone layer is healing![^ozone-heal] Sometimes it's better to just *pay off* Goliath, y'know? As for AI: a few AI Safety inventions had market payoffs[^safety-market], and I think the "Alternatives to AGI" & "Cyborgism" projects would be *both* safer & make a profit. Plus, the insurance industry would looooove managing AI risks.
+Stray thought: while "sticks" (threat of fines, punishment) are necessary, I think it's neglected how we can use "carrots" (market incentives) to redirect industry. After all, ozone-layer-thinning CFCs were removed *with cooperation* from DuPont (the leading creator of CFCs), because policymakers *explicitly helped* DuPont profit from the transition away from CFCs.[^cfc] Result: ozone layer is healing![^ozone-heal] Sometimes it's better to just *pay off* Goliath, y'know? As for AI: a few AI Safety inventions had market spinoffs[^safety-market], and I think the "Alternatives to AGI" & "Cyborgism" projects would be *both* safer & make a profit. Plus, the insurance industry would looooove managing AI risks.
 
 [^cfc]: TODO
 
@@ -888,11 +890,11 @@ Stray thought: while "sticks" (threat of fines, punishment) are necessary, I thi
 
 A note of pessimism, followed by cautious optimism.
 
-Consider the recent saga of SB 1047. This was an AI Safety bill in California USA that 65% of citizens supported (only 25% opposed, 10% unsure), passed 32-1 in the Senate, endorsed by Anthropic & Elon Musk (while opposed by OpenAI & Facebook)... then got vetoed by governor Gavin Newsom, a guy who broke his own Covid rules to go to dinner parties.[^sb-1047]
+Consider the recent saga of SB 1047. This was an AI Safety bill in California USA that citizens supported ~2.5-to-1, passed 32-1 in the Senate, endorsed by Anthropic & Elon Musk (while opposed by OpenAI & Facebook)... then got vetoed by governor Gavin Newsom, a guy who broke his own Covid lockdown rules to go to dinner parties.[^sb-1047]
 
 [^sb-1047]: TODO. also other citations for each point
 
-Actually, consider the last few *decades* in politics. Global warming, Covid-19, the fertility crisis, the opioid crisis, more war? "Humans coordinating to deal with potential civilization-level threats" is... not a thing we seem to be good at.
+Actually, consider the last few *decades* in politics. Covid-19, the fertility crisis, the opioid crisis, global warming, more war? "Humans coordinating to deal with potential civilization-level threats" is... not a thing we seem to be good at.
 
 But we *used* to be good at it! We eradicated smallpox[^smallpox], it's no longer the case that *half* of babies died before age 5[^infant-mortality], CFCs were banned & the ozone layer *is* actually healing![^ozone] I don't know *why* we were good then & suck now, but... the power is within us! We "just" gotta un-bury it.
 
